fix img width on small screens

--- a/DniproFuture/Content/css/agency.css
+++ b/DniproFuture/Content/css/agency.css
@@ -1047,6 +1047,15 @@ footer {
         right: 190px;
         top: 0;
     }
+
+    .team-member img {
+        width: 50%;
+    }
+
+    img.partner-member {
+        width: 50%;
+        margin: auto;
+    }
 }
 
 @media(max-width:500px) {
@@ -1141,6 +1150,8 @@ footer {
         width: 400px;
         margin: auto;
     }
+
+    
 }
 
 @media(max-width:500px) {
